# cpp-world-temp

./: Ancestor.cpp  Animal.cpp  CMakeLists.txt  Dandelion.cpp  Grass.cpp  Organism.cpp  Plant.cpp  Position.cpp  Sheep.cpp  Toadstool.cpp  Wolf.cpp  World.cpp  main.cpp
